--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
+    "loguru>=0.7.3",
     "pandas>=2.3.2",
     "psycopg2-binary>=2.9.10",
     "python-dotenv>=1.1.1",
